--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -9,13 +9,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"/>
-
-    <Button
+    
+	<LinearLayout 
+	    android:layout_width="wrap_content"
+    	android:layout_height="wrap_content"
+    	android:orientation="horizontal" >
+	    
+	    <Button
         android:id="@+id/snap_photo"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/snap_button" 
         android:layout_weight="0"
         android:onClick="onSnapButtonActivity"/>
+    
+    <Button
+        android:id="@+id/logout_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/logout_button" 
+        android:layout_weight="0"
+        android:onClick="onLogout"/>
+    
+	</LinearLayout>
+    
 
 </LinearLayout>
